Bug 92483 - [regression] Can only go to console (fbcon/fbdev) once. Screen gets blank on console mode on next attempts.
Summary: [regression] Can only go to console (fbcon/fbdev) once. Screen gets blank on ...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords: bisected
: 92484 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-10-15 22:16 UTC by Rodrigo Vivi
Modified: 2017-01-10 12:21 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features: display/atomic


Attachments
dmesg (117.33 KB, text/plain)
2015-10-15 22:16 UTC, Rodrigo Vivi
no flags Details

Description Rodrigo Vivi 2015-10-15 22:16:56 UTC
Created attachment 118907 [details]
dmesg

-- system architecture: x86_64
-- kernel version: 4.3.0-rc5+ #12 SMP Thu Oct 15's drm-intel-nightly
-- Linux distribution: Fedora
-- Machine or mother board model: BDW
-- Display connector: eDP

-- Regression: Yes. Bisect points to 

bb1e52402b2a288b09ae37e8182599931c7e9df is the first bad commit
ommit bbb1e52402b2a288b09ae37e8182599931c7e9df
uthor: Rob Clark <robdclark@gmail.com>
ate:   Tue Aug 25 15:35:58 2015 -0400

   drm/fb-helper: atomic restore_fbdev_mode()..


-- Steps to reproduce:
1. Boot to X
2. Alternate first time to fbcon (Ctrl+Alt+F2)
3. Get back to X (Ctrl+Alt+F1)
4. Alternate second time to fbcon (Ctrl+Alt+F2)
...

Only the first time you go to fbcon you can actually get the console. After that you only get a blank screen.

-- Comments on dmesg:
My dmesg is full of custom printks..

at 30 sec it is the first time going to fbcon where everything works... On the second one at 53s it seems fb_helper->fb is corrupted.
Comment 1 Jani Nikula 2015-10-16 07:32:46 UTC
*** Bug 92484 has been marked as a duplicate of this bug. ***
Comment 2 Rodrigo Vivi 2015-11-24 15:44:53 UTC
Unfortunately I can't remember what the solution was, but it is fixed on recent kernel.
Comment 3 Rob Clark 2015-11-24 16:03:43 UTC
(In reply to Rodrigo Vivi from comment #2)
> Unfortunately I can't remember what the solution was, but it is fixed on
> recent kernel.

fyi, 

commit a0fb6ad7ae28a4dce34c010028dc070eeacae1d9
Author:     Daniel Vetter <daniel.vetter@ffwll.ch>
AuthorDate: Fri Oct 16 19:11:30 2015 +0200

    drm/fb-helper: Fix fb refcounting in pan_display_atomic
Comment 4 Jari Tahvanainen 2017-01-10 12:21:38 UTC
Closing resolved+fixed, fix is in upstream as said in comment 3.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.